# grid-visu

./: .gitignore  README.md  display.service  macropad.service  pyproject.toml  run_all_checks.sh
macropad_src/: key_mapping.py
scripts/: install_cv2_stubs.sh
src/: display.py  macro_pad.py  settings.py
src/grid/: base.py  content.py
src/grid_visu/: display.py  settings.py
src/grid_visu/grid/: __init__.py  base.py  content.py
src/grid_visu/misc/: __init__.py  color.py  font.py  registry.py
src/misc/: color.py  types.py
